baseRec_untuned.out
Container: container_1648648882306_26332_01_000001 on hc08.nyu.cluster_8041
LogAggregationType: AGGREGATED
===========================================================================
LogType:stdout
LogLastModifiedTime:Tue Apr 19 17:29:06 -0400 2022
LogLength:180
LogContents:
  File "als_train_val.py", line 21
    cf = spark.read.parquet(f'/user/tl2204/data_truth.pq')
                                                        ^
SyntaxError: invalid syntax

End of LogType:stdout
***********************************************************************

Container: container_1648648882306_26332_02_000001 on hc17.nyu.cluster_8041
LogAggregationType: AGGREGATED
===========================================================================
LogType:stdout
LogLastModifiedTime:Tue Apr 19 17:29:07 -0400 2022
LogLength:180
LogContents:
  File "als_train_val.py", line 21
    cf = spark.read.parquet(f'/user/tl2204/data_truth.pq')
                                                        ^
SyntaxError: invalid syntax

End of LogType:stdout
***********************************************************************

